--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Red Hat Display', sans-serif;
 }
 
+button:disabled {
+  border-color: transparent !important;
+}
+
 /* COLOR CLASSES */
 
 .text-indigo {
@@ -33,8 +37,10 @@ body {
 
 .fore-days-cnt {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(300px, 40%));
+  grid-template-columns: repeat(auto-fit,minmax(28rem, 1fr));
   justify-content: space-between;
+  gap: 1rem 3rem;
+  /* justify-items: center; */
   /* color: red; */
 }
 /* 
@@ -54,10 +60,11 @@ body {
   display: none !important;
 }
 
-.main-test {
+.main-cnt {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-height: 100vh;
 }
 
 .currentCard {
@@ -65,6 +72,18 @@ body {
   border-radius: .5rem;
 }
 
+.country-row {
+  max-width: 50rem;
+}
+
+
+#root {
+  overflow-y: scroll;
+}
+
+#root > section {
+  max-height: 100%;
+}
 
 @media screen and (min-width: 62rem) {
 
